apps/base/astrbot/napcat/request-authentication.yaml
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: napcat-jwt
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
  jwtRules:
    - issuer: https://logto.isning.moe/oidc
      audiences:
        - m8rwqva1rsy9p2b3tbsad
      forwardOriginalToken: false
      fromHeaders:
        - name: X-OAuth2-Gateway-Id-Token
