apps/base/astrbot/napcat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: napcat
  labels:
    app: napcat
spec:
  type: ClusterIP
  selector:
    app: napcat
  ports:
    - name: http-webui
      port: 6099
